[package]
name = "pleme-auth-sessions"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "pleme-auth-sessions library"
repository = "https://github.com/pleme-io/pleme-auth-sessions"
homepage = "https://github.com/pleme-io/pleme-auth-sessions"
readme = "README.md"

[dependencies]
redis = { version = "0.24", features = ["connection-manager", "streams", "tokio-comp"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
thiserror = "2.0"
tracing = "0.1"
sha2 = "0.10.8"
axum = { version = "0.8.7", features = ["http1", "http2", "json", "query", "tokio", "tower-log"] }
base64 = "0.22.1"


